--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -83,6 +83,11 @@
         font-size: 15px;
         margin: 0;
     }
+
+    .hummer {
+        width: 50%;
+        height: auto;
+    }
 }
 
 @media only screen and (max-width: 500px) {
@@ -94,5 +99,10 @@
     .menu-item {
         border-bottom: 2px solid #454545;
         width: 50%;
+    }
+
+    .hummer {
+        width: 10%;
+        height: auto;
     }
 }
