--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -269,16 +269,36 @@
 }
 
 .carousel-container {
-    background-color: whitesmoke;
-    padding-top: 15px;
     padding-left: 30px;
     padding-right: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    height: 39vh;
+    background-color: #454545;
+}
+
+.carousel-container img {
+    transition: all 0.3s;
+    width: 150px;
+    height: 150px;
+    border: 2px solid;
+    margin: 10px;
+    object-fit: contain;
+}
+
+.carousel-container img:hover {
+    position: sticky;
+    cursor: zoom-in;
+    scale: 2;
+    z-index: 10;
 }
 
 .covering-div {
     position: absolute;
     width: 100%;
-    height: 38%;
+    height: 39%;
     background-color: rgba(69, 69, 69, 0.8);
     z-index: 2;
     display: flex;
@@ -541,7 +561,16 @@
     border: 2px solid red;
 }
 
+@media only screen and (max-width: 1700px) {
+
+    .carousel-container {
+        overflow: auto;
+    }
+}
+
+
 @media only screen and (max-width: 1500px) {
+
 
     .construction-display {
         text-align: center;
@@ -581,6 +610,11 @@
 
 
 @media only screen and (max-width: 1120px) {
+
+    .carousel-container img:hover {
+        scale: 1.5;
+    }
+
     .motivation-msg {
         top: 40vh;
         width: 80vw;
@@ -645,6 +679,7 @@
 }
 
 @media only screen and (max-width: 800px) {
+
     .main-footer p {
         font-size: 25px;
     }
