--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -32,8 +32,7 @@
 }
 
 .menu-item:hover {
-    text-decoration: overline;
-    animation: hover 1s 1;
+    animation: hover 0.5s 1;
 }
 
 
@@ -47,13 +46,16 @@
 .realestate {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     font-size: 20px;
     position: absolute;
     top: 60px;
-    background-color: gold;
-    border-radius: 5px;
     border: 2px solid #454545;
-
+    background-color: whitesmoke;
+    color: #454545;
+    margin: 7px;
+    text-align: center;
 }
 
 .realestate p {
@@ -62,6 +64,11 @@
 
 .immobilien {
     font-size: 18px;
+    text-decoration: none;
+}
+
+.immobilien:hover {
+    text-decoration: none !important;
 }
 
 
@@ -91,6 +98,19 @@
     }
 }
 
+@media only screen and (max-width: 1600px) {
+
+    .realestate {
+        width: fit-content;
+        padding: 2px;
+    }
+
+    .immobilien {
+        font-size: 12px;
+    }
+
+}
+
 @media only screen and (max-width: 1270px) {
     .menu-container {
         width: 100vw;
@@ -105,6 +125,11 @@
         margin: 0;
     }
 
+    .realestate {
+        width: 50%;
+        padding: 2px;
+    }
+
     .hummer {
         width: 50%;
         height: auto;
@@ -115,6 +140,12 @@
     .menu-container {
         flex-direction: column;
         height: 100px;
+    }
+
+    .realestate {
+        position: absolute;
+        top: 12vh;
+        height: fit-content;
     }
 
     .menu-item {
