--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -50,12 +50,13 @@
     justify-content: center;
     font-size: 20px;
     position: absolute;
-    top: 60px;
-    border: 2px solid #454545;
+    top: 48px;
+    border: 1px solid #454545;
     background-color: whitesmoke;
     color: #454545;
     margin: 7px;
     text-align: center;
+    filter: drop-shadow(0 0 5px gold);
 }
 
 .realestate p {
@@ -146,6 +147,8 @@
         position: absolute;
         top: 12vh;
         height: fit-content;
+        padding-left: 15px;
+        padding-right: 15px;
     }
 
     .menu-item {
