--- a/src/components/RealEstate.css
+++ b/src/components/RealEstate.css
@@ -16,7 +16,7 @@
     align-items: center;
     font-size: 1.5em;
     font-weight: 600;
-    color: #454545;
+    color: #000000;
     overflow: auto;
 }
 
@@ -34,13 +34,12 @@
     font-size: 40px;
     letter-spacing: 10px;
     margin: 0;
-    color: #000000;
+
 }
 
 .heading2 {
     font-size: 28px;
     margin: 0;
-    color: #000000;
 }
 
 .modal-content {
@@ -57,15 +56,40 @@
     align-items: center;
     overflow: auto;
     flex-wrap: wrap;
-    color: whitesmoke;
+
+}
+
+.house-icon {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+}
+
+.building-icon {
+    position: absolute;
+    top: 10px;
+    left: 10px;
 }
 
 .estate-section {
     width: 450px;
     height: 450px;
     border: 2px solid gold;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
+.price {
+    font-size: 40px;
+    color: whitesmoke;
+}
+
+.estate-section p {
+    margin: 0;
+}
 
 .estate-section:hover {
     transition: all 0.5s;
@@ -75,8 +99,8 @@
 }
 
 .object1 {
-    background-image: url('../assets/1.jpg');
-    width: 70%;
+    background-image: url('../assets/kuca/IMG-20230305-WA0038.jpg');
+    width: 90%;
     height: 70%;
     background-size: cover;
     background-position: center;
@@ -84,17 +108,8 @@
 }
 
 .object2 {
-    background-image: url('../assets/2.jpg');
-    width: 70%;
-    height: 70%;
-    background-size: cover;
-    background-position: center;
-    border-radius: 10px;
-}
-
-.object3 {
-    background-image: url('../assets/3.jpg');
-    width: 70%;
+    background-image: url('../assets/stan/IMG-20230305-WA0031.jpg');
+    width: 90%;
     height: 70%;
     background-size: cover;
     background-position: center;
@@ -106,4 +121,197 @@
     right: 10px;
     padding: 10px;
     cursor: pointer;
+}
+
+.object1-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+}
+
+.object1-main {
+    width: 100%;
+    height: 70%;
+    background-color: transparent;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.object1-bottom {
+    width: 100%;
+    height: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: whitesmoke;
+}
+
+.object1-bottom p {
+    font-size: 50px;
+    margin: 15px;
+}
+
+.back-arrow {
+    position: absolute;
+    left: 10px;
+    top: 10px;
+    cursor: pointer;
+}
+
+.back-arrow:hover {
+    transition: 0.3s;
+    scale: 1.5;
+}
+
+.object1-contact {
+    height: min-content;
+    background-color: gold;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 25px;
+    padding: 15px;
+    border: none;
+    border-radius: 5px;
+    font-family: initial;
+    color: #454545;
+}
+
+.object1-contact:active {
+    scale: 0.9;
+}
+
+.object1-left {
+    width: 40%;
+    display: flex;
+    align-items: center;
+}
+
+.object1-right {
+    width: 40%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.object1-main-img {
+    width: 400px;
+    height: 400px;
+    padding: 20px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    margin-right: 20px;
+}
+
+.object1-slider {
+    width: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    height: 400px;
+}
+
+.side-img-1 {
+    border: 2px solid;
+    height: 150px;
+    width: 150px;
+    border-radius: 20px;
+    cursor: pointer;
+    background-image: url("../assets/kuca/IMG-20230305-WA0039.jpg");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 10px;
+}
+
+.side-img-2 {
+    border: 2px solid;
+    height: 150px;
+    width: 150px;
+    border-radius: 20px;
+    cursor: pointer;
+    background-image: url("../assets/kuca/IMG-20230305-WA0040.jpg");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 10px;
+}
+
+.side-img-3 {
+    border: 2px solid;
+    height: 150px;
+    width: 150px;
+    border-radius: 20px;
+    cursor: pointer;
+    background-image: url("../assets/kuca/IMG-20230305-WA0040.jpg");
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 10px;
+}
+
+@media only screen and (max-width: 1500px) {
+    .object1-main {
+        width: 100%;
+        height: 100%;
+        background-color: transparent;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        font-size: 20px;
+    }
+
+    .object1-left {
+        width: 100%;
+        justify-content: center;
+        height: 50%;
+    }
+
+    .object1-main-img {
+        width: 40vw;
+        height: 30vh;
+    }
+}
+
+@media only screen and (max-width: 1075px) {
+    .object1-right {
+        width: 100%;
+        text-align: center;
+    }
+
+    .object1-slider {
+        justify-content: center;
+        height: 300px;
+    }
+
+    .side-img-1,
+    .side-img-2,
+    .side-img-3 {
+        height: 100px;
+        width: 100px;
+    }
+}
+
+
+
+@media only screen and (max-width: 650px) {
+    .heading1 {
+        font-size: 20px;
+        text-align: center;
+    }
+
+    .heading2 {
+        font-size: 15px;
+    }
+
+    .estate-section:hover {
+        scale: none;
+    }
 }
