--- a/src/components/RealEstate.css
+++ b/src/components/RealEstate.css
@@ -209,52 +209,79 @@
 }
 
 .object1-slider {
-    width: 30%;
     display: flex;
     flex-direction: column;
+    overflow: auto;
     align-items: center;
-    justify-content: space-around;
-    height: 400px;
+    justify-content: center;
 }
 
 .side-img-1 {
-    border: 2px solid;
     height: 150px;
     width: 150px;
-    border-radius: 20px;
     cursor: pointer;
     background-image: url("../assets/kuca/IMG-20230305-WA0039.jpg");
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    margin: 10px;
+    margin: 5px;
 }
 
 .side-img-2 {
-    border: 2px solid;
     height: 150px;
     width: 150px;
-    border-radius: 20px;
     cursor: pointer;
     background-image: url("../assets/kuca/IMG-20230305-WA0040.jpg");
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    margin: 10px;
+    margin: 5px;
 }
 
 .side-img-3 {
-    border: 2px solid;
     height: 150px;
     width: 150px;
-    border-radius: 20px;
     cursor: pointer;
     background-image: url("../assets/kuca/IMG-20230305-WA0040.jpg");
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    margin: 10px;
+    margin: 5px;
 }
+
+.side2-img-1 {
+    height: 150px;
+    width: 150px;
+    cursor: pointer;
+    background-image: url("../assets/stan/IMG-20230305-WA0034.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 5px;
+}
+
+.side2-img-2 {
+    height: 150px;
+    width: 150px;
+    cursor: pointer;
+    background-image: url("../assets/stan/IMG-20230305-WA0035.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 5px;
+}
+
+.side2-img-3 {
+    height: 150px;
+    width: 150px;
+    cursor: pointer;
+    background-image: url("../assets/stan/IMG-20230305-WA0030.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 5px;
+}
+
 
 @media only screen and (max-width: 1500px) {
     .object1-main {
@@ -313,5 +340,9 @@
 
     .estate-section:hover {
         scale: none;
+    }
+
+    .close-modal {
+        top: 10px;
     }
 }
