--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -137,6 +137,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
+    position: relative;
 }
 
 .middle-section span {
@@ -653,7 +654,6 @@
 
 @media only screen and (max-width: 1500px) {
 
-
     .construction-display {
         text-align: center;
         width: 100%;
@@ -831,7 +831,7 @@
     }
 
     .social-icons {
-        bottom: 570px;
+        top: 10px;
     }
 
     .contact-form {
@@ -846,9 +846,10 @@
 
     .msg-box textarea {
         width: 300px;
+        height: fit-content;
         margin-top: 20px;
         margin-bottom: 20px;
-        margin-left: 0;
+        margin-left: -5px;
     }
 
     .msg-box {
@@ -868,13 +869,72 @@
 }
 
 @media only screen and (max-width: 480px) {
+
+    .contact-text p {
+        font-size: 30px;
+        margin: 0;
+    }
+
     .main-footer p {
         font-size: 15px;
     }
 
     .about-text span {
-        width: 90vw;
+        width: 100vw;
         left: 0;
+    }
+
+    .about-section {
+        height: 65vh;
+
+    }
+
+    .images-section {
+        width: 100vw;
+    }
+
+    .projects-summary {
+        padding: 0;
+    }
+
+    .middle-section span {
+        padding-left: 20px;
+    }
+
+    .description {
+        padding-left: 10px;
+    }
+
+    .images-section div {
+        position: relative;
+        width: 100px;
+        height: 50px;
+    }
+
+    .renovation-display {
+        position: absolute;
+        left: 0;
+        top: -10px;
+        padding: 0;
+    }
+
+    .construction-display {
+        position: absolute;
+        left: 0;
+        top: -10px;
+        padding: 0;
+    }
+
+    .houses-display {
+        position: absolute;
+        height: 100px !important;
+        left: 0;
+        top: -50px;
+        padding: 0;
+    }
+
+    .projects-section {
+        height: fit-content;
     }
 
     .description-text {
@@ -883,7 +943,7 @@
 
     .about-icons {
         flex-direction: column;
-        height: 45vh;
+        height: 65vh;
     }
 
     .covering-div {
