--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -50,7 +50,7 @@
     justify-content: center;
     font-size: 20px;
     position: absolute;
-    top: 48px;
+    top: 55px;
     border: 1px solid #454545;
     background-color: whitesmoke;
     color: #454545;
@@ -128,7 +128,8 @@
 
     .realestate {
         width: 50%;
-        padding: 2px;
+        padding-left: 5px;
+        padding-right: 5px;
     }
 
     .hummer {
@@ -145,7 +146,7 @@
 
     .realestate {
         position: absolute;
-        top: 12vh;
+        top: 13vh;
         height: fit-content;
         width: 100%;
         padding-left: 25px;
