contact form z-idex fix

--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -832,10 +832,12 @@
 
     .social-icons {
         top: 10px;
+        height: fit-content;
     }
 
     .contact-form {
         flex-direction: column;
+        z-index: 200;
     }
 
     .info-box input {
