--- a/src/components/RealEstate.css
+++ b/src/components/RealEstate.css
@@ -177,6 +177,7 @@
     border-radius: 5px;
     font-family: initial;
     color: #454545;
+    margin-bottom: 10px;
 }
 
 .object1-contact:active {
