--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -797,7 +797,7 @@
     }
 
     .about-text span {
-        width: 80vw;
+        width: 85vw;
     }
 
     .about-description {
@@ -809,7 +809,7 @@
         position: absolute;
         width: 100%;
         opacity: 0.3;
-        top: 175vh;
+        top: 160vh;
     }
 
     .about-icons {
@@ -884,12 +884,10 @@
 
     .about-text span {
         width: 100vw;
-        left: 0;
     }
 
     .about-section {
         height: 65vh;
-
     }
 
     .images-section {
@@ -942,6 +940,7 @@
 
     .description-text {
         font-size: 12px;
+        padding-left: 10px;
     }
 
     .about-icons {
