--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -50,13 +50,14 @@
     justify-content: center;
     font-size: 20px;
     position: absolute;
-    top: 55px;
-    border: 1px solid #454545;
+    top: 45px;
+    border: 2px solid #454545;
     background-color: whitesmoke;
     color: #454545;
     margin: 7px;
     text-align: center;
     filter: drop-shadow(0 0 5px gold);
+    border-radius: 5px;
 }
 
 .realestate p {
