--- a/src/components/RealEstate.css
+++ b/src/components/RealEstate.css
@@ -14,7 +14,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    font-size: 1.5em;
+    font-size: 1.25em;
     font-weight: 600;
     color: #000000;
     overflow: auto;
@@ -219,9 +219,15 @@
     transition: all 0.3s;
 }
 
+.project-size:hover {
+    position: fixed;
+    cursor: zoom-in;
+    scale: 1.5;
+}
+
 .object1-slider {
     display: flex;
-    flex-direction: column;
+    align-items: center;
 }
 
 .object2-slider {
@@ -310,6 +316,12 @@
         min-height: 20vh;
         height: 30vh;
         margin: 0;
+    }
+
+    .project-size:hover {
+        position: relative;
+        cursor: initial;
+        scale: 1;
     }
 }
 
