--- a/src/components/RealEstate.css
+++ b/src/components/RealEstate.css
@@ -117,6 +117,15 @@
     border-radius: 10px;
 }
 
+.object3 {
+    background-image: url('../assets/kuca-kut/slika2.jpg');
+    width: 90%;
+    height: 70%;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+}
+
 .close-modal {
     position: absolute;
     right: 10px;
