sidebar and modal backgorund color change

--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -56,7 +56,7 @@
     color: #454545;
     margin: 7px;
     text-align: center;
-    filter: drop-shadow(0 0 5px gold);
+    filter: drop-shadow(0 0 5px #68abb8);
     border-radius: 5px;
 }
 
