--- a/src/components/RealEstate.css
+++ b/src/components/RealEstate.css
@@ -172,6 +172,15 @@
 }
 
 .object6 {
+    background-image: url('../assets/split-riva/main.jpg');
+    width: 90%;
+    height: 70%;
+    background-size: cover;
+    background-position: center;
+    border-radius: 10px;
+}
+
+.object7 {
     background-image: url('../assets/komiza.jpg');
     width: 90%;
     height: 70%;
