--- a/src/components/Menu.css
+++ b/src/components/Menu.css
@@ -13,7 +13,8 @@
 }
 
 .menu-item {
-    width: 20vw;
+    white-space: nowrap;
+    width: 15vw;
     height: 100%;
     color: #454545;
     font-size: 23px;
@@ -22,13 +23,9 @@
     align-items: center;
     cursor: pointer;
     text-transform: uppercase;
-    letter-spacing: 3px;
+    /* letter-spacing: 3px; */
     font-weight: 600;
     position: relative;
-}
-
-.menu-item:first-child {
-    text-decoration: overline;
 }
 
 .menu-item:hover {
@@ -76,7 +73,7 @@
 .language-wrapper {
     position: absolute;
     top: -20px;
-    right: -20vw;
+    right: -15vw;
     display: flex;
     align-items: center;
     padding: 2px;
@@ -133,7 +130,7 @@
 
     100% {
         color: #454545;
-        letter-spacing: 3px;
+        letter-spacing: 0;
     }
 }
 
@@ -150,12 +147,26 @@
 
 }
 
-@media only screen and (max-width: 1270px) {
+@media only screen and (max-width: 1400px) {
     .menu-container {
-        width: 85vw;
-        left: 0;
-        white-space: nowrap;
+        width: 80vw;
+        left: 10vw;
     }
+
+    .language-wrapper {
+        right: -10vw;
+        top: 10px;
+    }
+
+    .language-wrapper p {
+        display: none;
+    }
+
+
+}
+
+
+@media only screen and (max-width: 1270px) {
 
     .language-wrapper {
         width: fit-content;
@@ -166,12 +177,18 @@
 
     }
 
-    .language-wrapper p {
-        display: none;
+    .language-wrapper {
+        right: -8vw;
+        top: -10px;
     }
+
+    .language-wrapper span {
+        flex-direction: column;
+    }
+
 }
 
-@media only screen and (max-width: 710px) {
+@media only screen and (max-width: 990px) {
     .menu-item {
         font-size: 15px;
         margin: 0;
@@ -197,11 +214,15 @@
     }
 }
 
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 635px) {
     .menu-container {
         flex-direction: column;
-        align-items: flex-end;
+        align-items: center;
         height: 100px;
+        top: 5px;
+        z-index: 11;
+        width: 100%;
+        left: 0;
     }
 
     .realestate {
@@ -233,6 +254,7 @@
     .language-wrapper {
         padding: 5px;
         height: 100%;
+        right: 0;
     }
 
     .english,
